--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Base.Theme.BIN_info" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!-- Фон -->
+        <item name="android:colorBackground">@color/black</item>
+
+        <!-- Цвет фона -->
+        <item name="jcBackgroundColor">@color/black</item>
+
+        <!-- Цвет основного текста -->
+        <item name="jcMainTextColor">@color/white</item>
+
+        <!-- Цвет hint текста для EditText -->
+        <item name="jcHintTextColor">@color/white</item>
+
+        <!-- Цвет фона для EditText -->
+        <item name="jcEditTextBackgroundColor">@color/gray</item>
+
+        <!-- Цвет подсказки для InputEditText -->
+        <item name="jcEditTextColorHint">@color/black</item>
     </style>
 </resources>
