--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,12 @@
         <item name="titleTextColor">?attr/jcMainTextColor</item>
     </style>
 
+    <!-- Стиль для текста ошибок -->
+    <style name="ErrorMessageStyle">
+        <item name="android:layout_marginHorizontal">@dimen/margin_standard</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAppearance">@style/Medium_22_Style</item>
+        <item name="android:textColor">?attr/jcMainTextColor</item>
+    </style>
+
 </resources>
