--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <!--tools:context=".search.ui.SearchFragment" -->
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
@@ -42,6 +41,7 @@
         android:id="@+id/cv_search_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/lilac"
         android:layout_margin="16dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp">
@@ -50,77 +50,86 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="@dimen/margin_standard">
 
             <TextView
                 android:id="@+id/tv_scheme"
+                style="@style/TextRegular16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Scheme: "
-                android:textAppearance="?attr/textAppearanceSubtitle1" />
+                tools:text="Scheme: " />
 
             <TextView
                 android:id="@+id/tv_card_type"
+                style="@style/TextRegular16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Card type: "
-                android:textAppearance="?attr/textAppearanceBody1" />
+                android:layout_marginTop="@dimen/margin_micro"
+                tools:text="Card type: " />
 
             <TextView
                 android:id="@+id/tv_card_brand"
+                style="@style/TextRegular16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Card brand: "
-                android:textAppearance="?attr/textAppearanceBody1" />
+                android:layout_marginTop="@dimen/margin_micro"
+                tools:text="Card brand: " />
 
             <TextView
                 android:id="@+id/tv_prepaid"
+                style="@style/TextRegular16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Is card prepaid: "
-                android:textAppearance="?attr/textAppearanceBody1" />
+                android:layout_marginTop="@dimen/margin_micro"
+                tools:text="Is card prepaid: " />
 
             <TextView
                 android:id="@+id/tv_country"
+                style="@style/TextRegular16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Country: "
-                android:textAppearance="?attr/textAppearanceSubtitle1" />
+                android:layout_marginTop="@dimen/margin_micro"
+                tools:text="Country: " />
 
             <TextView
                 android:id="@+id/tv_coordinates"
+                style="@style/TextRegular16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Coordinates: "
-                android:textAppearance="?attr/textAppearanceBody1" />
+                android:layout_marginTop="@dimen/margin_micro"
+                tools:text="Coordinates: " />
 
             <TextView
                 android:id="@+id/tv_bank_name"
+                style="@style/TextRegular16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Bank Name: "
-                android:textAppearance="?attr/textAppearanceBody1" />
+                android:layout_marginTop="@dimen/margin_micro"
+                tools:text="Bank Name: " />
 
             <TextView
                 android:id="@+id/tv_bank_url"
+                style="@style/TextRegular16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Bank URL: "
-                android:textAppearance="?attr/textAppearanceBody1" />
+                android:layout_marginTop="@dimen/margin_micro"
+                tools:text="Bank URL: " />
 
             <TextView
                 android:id="@+id/tv_bank_phone"
+                style="@style/TextRegular16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Bank Phone: "
-                android:textAppearance="?attr/textAppearanceBody1" />
+                android:layout_marginTop="@dimen/margin_micro"
+                tools:text="Bank Phone: " />
 
             <TextView
                 android:id="@+id/tv_bank_city"
+                style="@style/TextRegular16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Bank City: "
-                android:textAppearance="?attr/textAppearanceBody1" />
+                android:layout_marginTop="@dimen/margin_micro"
+                tools:text="Bank City: " />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -141,5 +150,5 @@
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/margin_large"
         android:layout_marginBottom="@dimen/margin_standard"
-        android:indeterminateTint="@color/blue" />
+        android:indeterminateTint="@color/lilac" />
 </LinearLayout>
