--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,4 +5,5 @@
     <attr name="jcHintTextColor" />
     <attr name="jcEditTextBackgroundColor" />
     <attr name="jcEditTextColorHint" />
+    <attr name="jcCardViewBackgroundColor" />
 </resources>
