--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,12 @@
         <item name="android:textColor">?attr/jcMainTextColor</item>
     </style>
 
+    <!-- Стиль для текста карточек -->
+    <style name="TextRegular16">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textColor">?attr/jcMainTextColor</item>
+    </style>
+
 </resources>
