--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#1A1B22</color>
     <color name="white">#FDFDFD</color>
     <color name="blue">#3772E7</color>
-    <color name="lilac">#C367F4</color>
+    <color name="lilac">#CB83F0</color>
     <color name="gray">#AEAFB4</color>
     <color name="light_gray">#E6E8EB</color>
     <color name="dark_gray">#801A1B22</color>
