--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,12 +29,14 @@
         <item name="android:textColor">?attr/jcMainTextColor</item>
     </style>
 
-    <!-- Стиль для текста карточек -->
-    <style name="TextRegular16">
-        <item name="android:textSize">16sp</item>
-        <item name="android:fontFamily">@font/ys_display_regular</item>
-        <item name="android:textFontWeight">400</item>
+    <!-- Стиль для кнопок-->
+    <style name="ButtonStyle">
+        <item name="android:layout_marginHorizontal">@dimen/margin_standard</item>
+        <item name="android:paddingVertical">@dimen/margin_standard</item>
+        <item name="android:textAppearance">@style/Medium_16_Style</item>
         <item name="android:textColor">?attr/jcMainTextColor</item>
+        <item name="android:background">@drawable/bg_rounded_button</item>
+        <item name="android:gravity">center</item>
     </style>
 
 </resources>
