--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="EditText_Style">
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">?attr/jcHintTextColor</item>
-        <item name="android:inputType">text</item>
+        <item name="android:inputType">number</item>
         <item name="android:paddingStart">@dimen/margin_standard</item>
         <item name="android:paddingEnd">@dimen/edit_text_padding_end</item>
         <item name="android:background">@drawable/bg_rounded_edit_text</item>
