--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -38,112 +38,10 @@
             android:backgroundTint="@color/black"
             android:src="@drawable/ic_clear" />
     </FrameLayout>
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_search_result"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/lilac"
-        android:layout_margin="16dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="4dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/margin_standard">
-
-            <TextView
-                android:id="@+id/tv_scheme"
-                style="@style/Regular_16_Style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="?attr/jcMainTextColor"
-                tools:text="Scheme: " />
-
-            <TextView
-                android:id="@+id/tv_card_type"
-                style="@style/Regular_16_Style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_micro"
-                android:textColor="?attr/jcMainTextColor"
-                tools:text="Card type: " />
-
-            <TextView
-                android:id="@+id/tv_card_brand"
-                style="@style/Regular_16_Style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_micro"
-                android:textColor="?attr/jcMainTextColor"
-                tools:text="Card brand: " />
-
-            <TextView
-                android:id="@+id/tv_prepaid"
-                style="@style/Regular_16_Style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_micro"
-                android:textColor="?attr/jcMainTextColor"
-                tools:text="Is card prepaid: " />
-
-            <TextView
-                android:id="@+id/tv_country"
-                style="@style/Regular_16_Style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_micro"
-                android:textColor="?attr/jcMainTextColor"
-                tools:text="Country: " />
-
-            <TextView
-                android:id="@+id/tv_coordinates"
-                style="@style/Regular_16_Style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_micro"
-                android:textColor="?attr/jcMainTextColor"
-                tools:text="Coordinates: " />
-
-            <TextView
-                android:id="@+id/tv_bank_name"
-                style="@style/Regular_16_Style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_micro"
-                android:textColor="?attr/jcMainTextColor"
-                tools:text="Bank Name: " />
-
-            <TextView
-                android:id="@+id/tv_bank_url"
-                style="@style/Regular_16_Style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_micro"
-                android:textColor="?attr/jcMainTextColor"
-                tools:text="Bank URL: " />
-
-            <TextView
-                android:id="@+id/tv_bank_phone"
-                style="@style/Regular_16_Style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_micro"
-                android:textColor="?attr/jcMainTextColor"
-                tools:text="Bank Phone: " />
-
-            <TextView
-                android:id="@+id/tv_bank_city"
-                style="@style/Regular_16_Style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_micro"
-                android:textColor="?attr/jcMainTextColor"
-                tools:text="Bank City: " />
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    <include
+        layout="@layout/item_list"
+        android:id="@+id/include_search_result" />
 
     <TextView
         android:id="@+id/tv_error"
