Исправила порядок сортировки в БД - по возрастанию. Добавила следующую логика в пакет external: нажатие на URL банка, телефон банка или координаты страны отправляют пользователя в приложение, которое может обработать эти данные (браузер, звонилка, карты). Для номера телефона добавила разрешение. Отформатировала код

--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -40,8 +40,8 @@
     </FrameLayout>
 
     <include
-        layout="@layout/item_list"
-        android:id="@+id/include_search_result" />
+        android:id="@+id/include_search_result"
+        layout="@layout/item_list" />
 
     <TextView
         android:id="@+id/tv_error"
